<resources>
    <string name="app_name">Registration App New</string>
    <string name="map_api_key">AIzaSyCXjWuNs2dCectvJvy8EHitnTNkFKoK3TI</string>
    <string name="action_settings">Settings</string>
    <string name="center_name">Infinite</string>
    <string name="welcome_msg">Welcome to</string>
    <string name="medical_center">@string/app_name</string>
    <string name="read_more">Read More &#62;&#62;</string>
    <string name="foundation">Foundation</string>
    <string name="since_to">ESTD Since 1972</string>
    <string name="more">MORE</string>
    <string name="View_pdf">View Pdf</string>
    <string name="yes">yes</string>
    <string name="no">no </string>
    <string name="declarationNote">I declare that the information provided
        herewith is correct and valid, and that I have read and understood
        the tearms and conditions.
    </string>
    <string name="read_tearms_and_condition">Read Tearms &#38; Condition </string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="committee">Committee</string>
    <string name="members">Members</string>
    <string name="download">Download</string>
    <string name="cme">CME</string>
    <string name="activities">Activities</string>
    <string name="gallery">Gallery</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="office_brearer">Office Bearers</string>
    <string name="advisory_board">Advisory Board</string>
    <string name="co_op_director">Co.Op.Director</string>
    <string name="editor">Editor</string>
    <string name="co_ordinator">Co.Ordinator</string>
    <string name="trustee">Trustee</string>
    <string name="opening_hour">Opening hours</string>
    <string name="textMsg">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</string>
    <string name="mon_fri">Mon - Fri</string>
    <string name="mon_fri_time">08:00 - 21:00</string>
    <string name="sat_sun">Sat - Sun</string>
    <string name="sat_sun_time">09:00 - 20:00</string>
    <string name="about_medical_center">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite.</string>
    <string name="chest">Chest</string>
    <string name="heart">Heart</string>
    <string name="bone">Bone</string>
    <string name="brain">Brain</string>
    <string name="surgery">Surgery</string>
    <string name="cancer">Cancer</string>
    <string name="children">Children</string>
    <string name="eye">Eye Ent</string>
    <string name="sabarmati_medical_association">SABARMATI MEDICAL\nFOUNDATION</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="registration">Registration</string>
    <string name="new_customer">New Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="new_expenses">Create New Expenses</string>
    <string name="expenses_list">Expenses List</string>
    <string name="customer">Customers</string>
    <string name="company_name">Company Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="gst_no">GST NO %s</string>
    <string name="address">Address</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">PinCode</string>
    <string name="copy_billing_address">Copy Billing Address</string>
    <string name="work_phone">Phone</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="fax">Fax</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="add_billing_address">Add Billing Address</string>
    <string name="add_address">Add Address</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="load_more">load_more</string>
    <string name="ooops">ooops</string>
    <string name="no_result_found">No Result Found</string>
    <string name="more_search">More Search</string>
    <string name="search_hint">Search Hint</string>
    <string name="design_no">Design No</string>
    <string name="type_of_work">Type OF Work</string>
    <string name="color">Color</string>
    <string name="set_price">Set Price</string>
    <string name="piece_price">Piece Price</string>
    <string name="setprices">setprices</string>
    <string name="pieceprice">Piece Price</string>
    <string name="add">Add</string>
    <string name="pieces_in_price">Pieces in Price</string>
    <string name="type_of_saree">Type Of Saree</string>
    <string name="type_of_Design">Type Of Design</string>
    <string name="pieces_in_set">Pieces In Set</string>
    <string name="done">Done</string>
    <string name="design_listing">Design Listing</string>
    <string name="create_new_Agent">Create New Agent</string>
    <string name="edit_agent">Edit Agent</string>
    <string name="payments_received">Payments Received</string>
    <string name="create_new_Design">Create New Design</string>
    <string name="edit_Design">Edit Design</string>
    <string name="create_new_labour">Create New Labour</string>
    <string name="edit_labour">Edit Labour</string>
    <string name="create_new_Sales">Create New Sales</string>
    <string name="edit_sales">Edit Sales</string>
    <string name="create_sales_return">Create Sales Return</string>
    <string name="create_address">Add Address</string>
    <string name="login_page">Login</string>
    <string name="save">Save</string>
    <string name="transportss">Transport</string>
    <string name="create_new_transport">Create New Transport</string>
    <string name="edit_transport">Edit Transport</string>
    <string name="set_discount_value">0</string>
    <string name="set_cgst_value">2.5</string>
    <string name="set_sgst_value">2.5</string>
    <string name="set_igst_value">0</string>
    <string name="agent">Agent</string>
    <string name="filter">Filter</string>
    <string name="filter_results">Filter Results</string>
    <string name="labor">Labour</string>
    <string name="orderlist">Order Listing</string>
    <string name="saleslist">Sales Listing</string>
    <string name="sales_return">Sales Return</string>
    <string name="transports"> Create New Transport</string>
    <string name="create_new_vendor"> Create New Vendor</string>
    <string name="edit_vendor">Edit Vendor</string>
    <string name="new_order">Create New order</string>
    <string name="edit_order">Edit Order</string>
    <string name="order_no">Order No</string>
    <string name="date">Date</string>
    <string name="company_details">Company Details</string>
    <string name="nirav_texttiels_opp_falcan_complex_nana_varacha_surat_pin_365577">Nirav Texttiels opp Falcan Complex nana Varacha Surat pin- 365577</string>
    <string name="transport_name">Transport Name</string>
    <string name="agent_name">Agent Name</string>
    <string name="item_details">Item Details</string>
    <string name="remark">Remarks</string>
    <string name="total_amount">Total Amount</string>
    <string name="gross_total">Gross Total</string>
    <string name="discount">Discount (0%)</string>
    <string name="sub_total">Sub Total</string>
    <string name="gst_5">GST (5%)</string>
    <string name="in_worde">In Words</string>
    <string name="mobile_no">Mobile</string>
    <string name="autogenerated">Autogenerated</string>
    <string name="forgot_pass_text">Lost your password? Do not worry - Now you can reset your password via registered mobile.</string>
    <string name="validate_mobile">Enter validate Mobile No</string>
    <string name="expenses_categoty_add">Add Category</string>
    <string name="expenses_categoty_select">Select Category</string>
    <string name="customerdetails">Customer Details</string>
    <string name="transportdetails">Transport Details</string>
    <string name="labourdetails">Labour Details</string>
    <string name="vendordetails">Vendor Details</string>
    <string name="agentdetails">Agent Details</string>
    <string name="payment_received_details">Payment Received Details</string>
    <string name="ledgers_details">Ledgers</string>
    <string name="orderdetails">Order Details</string>
    <string name="salesDetails">Sales Details</string>
    <string name="sales_return_details">Sales Return Details</string>
    <string name="designdetails">Design Details</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="contacts">Contacts</string>
    <string name="other_contacts">Other Contacts </string>
    <string name="text_more">⋮</string>
    <string name="add_contact_person">+ Add Contact Person</string>
    <string name="create_new_item">Create New Item</string>
    <string name="search_design">Search Design</string>
    <string name="set">Set</string>
    <string name="add_more">Add More</string>
    <string name="edit">Edit</string>
    <string name="add_items">Add Items</string>
    <string name="add_other_contacts">Add Contacts</string>
    <string name="qty_type">Qty Type</string>
    <string name="l_r_no">L R No</string>
    <string name="agent_haste">AGENT/HASTE</string>
    <string name="notes">Notes</string>
    <string name="login">Login</string>
    <string name="processing">Processing</string>
    <string name="quantity_type">Quantity Type</string>
    <string name="type_of_fabric">Type OF Fabric</string>
    <string name="designname">Design Name</string>
    <string name="barcode">Barcode</string>
    <string name="stock">Stock</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_password_inc">Username and Password InCorrect  Please Try Again.</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="enter_user_name">Please enter Username</string>
    <string name="enter_password">Please enter Password</string>
    <string name="enter_company_name">Please Enter Company Name</string>
    <string name="enter_category_name">Please Enter Category Name</string>
    <string name="enter_invoice_no">Enter Invoice No</string>
    <string name="enter_order_no">Enter Order No</string>
    <string name="enter_first_name">Please enter First Name</string>
    <string name="enter_last_name">Please enter Last Name</string>
    <string name="enter_mobile_no">Please enter Mobile No</string>
    <string name="enter_phone_no">Please enter Phone No</string>
    <string name="enter_email_id">Please enter Email</string>
    <string name="enter_date">Please enter Date </string>
    <string name="enter_city">Please enter City</string>
    <string name="enter_state">Please enter State</string>
    <string name="enter_email">Please enter Email</string>
    <string name="enter_name">Enter Name</string>
</resources>