<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtLabelChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_clear_black"
                android:drawableRight="@drawable/ic_clear_black"
                android:gravity="center"
                android:padding="@dimen/common_10_dp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/h3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_05_dp"
                android:background="@color/light_bg_dark_disabled_text" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_30_dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtOldPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:hint="Old Password"
                    android:padding="@dimen/common_15_dp"
                    android:textColorHint="@color/dark_bg_light_disabled_text"
                    android:textSize="@dimen/h4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_15_dp"
                    android:textColorHint="@color/dark_bg_light_disabled_text"
                    android:textSize="@dimen/h4" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/confirm_password">

                <EditText
                    android:id="@+id/edtConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_15_dp"
                    android:textColorHint="@color/dark_bg_light_disabled_text"
                    android:textSize="@dimen/h4" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSubmitChangePassword"
                style="@style/BtnTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/common_15_dp"
                android:layout_marginTop="@dimen/common_30_dp"
                android:paddingEnd="@dimen/common_50_dp"
                android:paddingLeft="@dimen/common_50_dp"
                android:paddingRight="@dimen/common_50_dp"
                android:paddingStart="@dimen/common_50_dp"
                android:text="@string/submit"
                android:textSize="@dimen/h5"
                android:textStyle="normal" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>